package com.github.brokenswing.comixaire.dao;

public abstract class DAOFactory
{

    public abstract StaffMemberDAO getStaffMemberDAO();

    public abstract ClientDAO getClientDAO();

}
